--- a/1/2.html
+++ b/1/2.html
@@ -7,17 +7,18 @@
 </head>
 
 <body>
-    <h3>SVG Bar</h3>
-    <svg>
-        <rect width="50" height="200" style="fill: blue"></rect>
+    <svg width="50" height="50">
+        <circle cx="25" cy="25" r="25" style="fill: blue"></circle>
     </svg>
-    <h3>D3 Bar</h3>
     <script>
         d3.select("body")
             .append("svg")
-            .append("rect")
             .attr("width", 50)
-            .attr("height", 200)
+            .attr("height", 50)
+            .append("circle")
+            .attr("cx", 25)
+            .attr("cy", 25)
+            .attr("r", 25)
             .style("fill", "red");
     </script>
 </body>
