Updated file locations.

--- a/12 - CSV.html
+++ b/12 - CSV.html
@@ -54,7 +54,7 @@
                 .text("Sales Total: " + salesTotal);
         }
 
-        d3.csv("../Data/MonthlySales.csv", function (error, data) {
+        d3.csv("Data/MonthlySales.csv", function (error, data) {
             if (error) {
                 console.log(error);
             } else {
