--- a/13 - CSV.html
+++ b/13 - CSV.html
@@ -63,7 +63,7 @@
                 .text(function (d) { return d.name + ": " + d.value.toFixed(2); });
         }
 
-        d3.csv("../Data/MonthlySales.csv", function (error, data) {
+        d3.csv("Data/MonthlySales.csv", function (error, data) {
             if (error) {
                 console.log(error);
             } else {
