--- a/15 - JSON.html
+++ b/15 - JSON.html
@@ -68,7 +68,7 @@
                 .text(function (d) { return d.name + ": " + d.value.toFixed(2); });
         }
 
-        d3.json("../Data/MonthlySalesByCategory.json", function (error, data) {
+        d3.json("Data/MonthlySalesByCategory.json", function (error, data) {
             if (error) {
                 console.log(error);
             } else {
