--- a/26 - Maps.html
+++ b/26 - Maps.html
@@ -25,18 +25,72 @@
                 height: h
             });
 
-        d3.json("data/cb_2015_us_state_500k.json", function (json) {
-            svg.selectAll("path")
-                .data(json.features)
-                .enter()
-                .append("path")
-                .attr({
-                    d: path
-                })
-                .style({
-                    fill: "#666666"
+        var color = d3.scale.linear()
+            .range(['rgb(236,231,242)', 'rgb(166,189,219)', 'rgb(43,140,190)']);
+
+        d3.csv("data/state-sales.csv", function (data) {
+
+            // tie the color range to the data domain
+            color.domain([
+                0,
+                d3.max(data, function (d) { return d.sales; })
+            ]);
+
+            d3.json("data/cb_2015_us_state_500k.json", function (json) {
+
+                // join data together
+                // loop all sales
+                data.forEach(function (d) {
+
+                    // get sales data
+                    var salesState = d.state;
+                    var salesValue = parseFloat(d.sales);
+
+                    // loop all features
+                    json.features.forEach(function (j) {
+
+                        // get feature data
+                        var usState = j.properties.NAME;
+
+                        // try to join
+                        if (salesState == usState)
+                        {
+                            // apply sales value to map data
+                            j.properties.value = salesValue;
+                        }
+                    });
                 });
+
+
+                svg.selectAll("path")
+                    .data(json.features)
+                    .enter()
+                    .append("path")
+                    .attr({
+                        d: path
+                    })
+                    .style({
+                        fill: function (d) {
+
+                            // get the sales value for this map object
+                            var value = d.properties.value;
+
+                            // if there's a sales value for it, turn it into a color
+                            if (value) {
+                                return color(value);
+                            }
+                            else {
+                                return "#666666";
+                            }
+                        }
+                    });
+
+
+            });
+
         });
+
+
 
     </script>
 </body>
